<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.crown.passwordmanager.ForgetPasswordActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="20dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.448">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/resetPassword"
                        android:layout_width="200dp"
                        android:layout_height="55dp"

                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="50dp"
                        android:background="@drawable/textborder"
                        android:gravity="center"
                        android:text="@string/reset_password"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        app:cornerRadius="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/conformPassword"
                        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:autofillHints=""
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/enter_new_password"
                        android:inputType="textPassword"
                        android:minHeight="48dp"
                        android:textColorHint="@color/hint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/otp" />

                    <EditText
                        android:id="@+id/otp"
                        style="@style/Widget.AppCompat.AutoCompleteTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:autofillHints=""
                        android:drawableStart="@drawable/ic_outline_vpn_key_24"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/otp"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp"
                        android:textColorHint="@color/hint"
                        app:layout_constraintEnd_toStartOf="@+id/verify"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/email" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:gravity="center"
                        android:text="@string/reset_password"
                        android:textColor="#22ADF6"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:autofillHints=""
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp"
                        android:textColorHint="@color/hint"
                        app:layout_constraintEnd_toStartOf="@+id/sendotp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <EditText
                        android:id="@+id/conformPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:autofillHints=""
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/conform_password"
                        android:inputType="textPassword"
                        android:minHeight="48dp"
                        android:textColorHint="@color/hint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/password"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:textColor="#FF0000"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@+id/resetPassword"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/conformPassword"
                        app:layout_constraintVertical_bias="0.0" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/sendotp"
                        android:layout_width="110dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="20dp"
                        android:background="#DCDCDC"
                        android:text="@string/send_otp"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/verify"
                        android:layout_width="110dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="#DCDCDC"
                        android:text="@string/verify"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sendotp" />

                    <ImageButton
                        android:id="@+id/imageButton1"
                        android:layout_width="50dp"
                        android:layout_height="48dp"
                        android:layout_marginBottom="10dp"
                        android:background="#FFFFFF"
                        android:contentDescription="@string/password"
                        android:minWidth="48dp"
                        android:paddingTop="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/password"
                        app:layout_constraintEnd_toEndOf="@+id/password"
                        app:srcCompat="@drawable/ic_baseline_remove_red_eye_24"
                        tools:ignore="ImageContrastCheck" />

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="50dp"
                        android:layout_height="48dp"
                        android:layout_marginBottom="10dp"
                        android:background="#FFFFFF"
                        android:contentDescription="@string/conform_password"
                        android:minWidth="48dp"
                        android:paddingTop="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/conformPassword"
                        app:layout_constraintEnd_toEndOf="@+id/conformPassword"
                        app:srcCompat="@drawable/ic_baseline_remove_red_eye_24"
                        tools:ignore="ImageContrastCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>