<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.crown.passwordmanager.MainActivity">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="20dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.448">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/signIn"
                        android:layout_width="184dp"
                        android:layout_height="55dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/textborder"
                        android:gravity="center"
                        android:text="@string/sign_in"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        app:cornerRadius="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/forgetPassword"
                        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

                    <TextView
                        android:id="@+id/signUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="50dp"
                        android:gravity="center"
                        android:minHeight="48dp"
                        android:text="@string/don_t_have_an_account_sign_up"
                        android:textColor="#00838F"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/signIn"
                        app:layout_constraintVertical_bias="0.13999999" />

                    <TextView
                        android:id="@+id/forgetPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:gravity="end"
                        android:minHeight="48dp"
                        android:text="@string/forget_your_password"
                        android:textColor="#00838F"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/password" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="20dp"
                        android:autofillHints=""
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:minHeight="48dp"
                        android:textColorHint="@color/hint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/email"
                        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />


                    <EditText
                        android:id="@+id/email"
                        style="@style/Widget.AppCompat.AutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="28dp"
                        android:layout_marginEnd="20dp"
                        android:autofillHints=""
                        android:drawableStart="@drawable/ic_baseline_email_24"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp"
                        android:textColorHint="@color/hint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:gravity="center"
                        android:text="@string/sign_in"
                        android:textColor="#22ADF6"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/changePassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:minHeight="48dp"
                        android:text="@string/change_password"
                        android:textColor="#00838F"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/password" />

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="50dp"
                        android:layout_height="48dp"
                        android:layout_marginBottom="10dp"
                        android:background="#FFFFFF"
                        android:contentDescription="@string/password"
                        android:minWidth="48dp"
                        android:paddingTop="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/password"
                        app:layout_constraintEnd_toEndOf="@+id/password"
                        app:srcCompat="@drawable/ic_baseline_remove_red_eye_24"
                        tools:ignore="ImageContrastCheck" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>